# ObsGraph-Flask

./: .gitignore  AGENTS.md  IMPROVEMENTS.md  QUICKSTART.md  README.md  gunicorn.conf.py  pyproject.toml  requirements.txt
etc/: README.md  obsgraph.conf
etc/systemd/: obsgraph-flask.service
obsgraph_flask/: __init__.py  app.py  wsgi.py
obsgraph_flask/lib/: keys.py
obsgraph_flask/templates/: index.html
obsgraph_flask/tools/: obsgraph_configurator.py
tests/: __init__.py  test_app.py  test_basic.py  test_configurator.py  test_obsgraph_app.py
